# project_web

./: .env.sample  blogs.json  data.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_view_count.py  0003_alter_blog_view_count.py  0004_alter_blog_slug_alter_blog_view_count.py  0005_alter_blog_to_published.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_date_change_alter_product_date_create.py  0002_product_owner.py  0003_alter_product_date_change_alter_product_date_create.py  0003_product_is_published.py  0004_alter_product_date_change_alter_product_date_create.py  0005_alter_product_options_alter_product_category_id_and_more.py  0006_category_created_at.py  0007_remove_category_created_at_version.py  0008_remove_category_created_at_alter_version_product.py  0009_remove_category_created_at_alter_version_product.py
catalog/templates/catalog/: base_page.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_form.html  products.html
catalog/templates/templatetags/: my_tags.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_email_verify.py
users/templates/users/: confirm_email.html  (+5 more)
(+1 files in other folders)
