[tool.poetry]
name = "project-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_web"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.7"
psycopg2 = "^2.9.7"
ipython = "^8.15.0"
pytils = "^0.4.1"
django-bootstrap5 = "^23.3"
redis = "^5.0.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
